# rpchat

./: .clang-format  .clang-tidy  .gitignore  .ninja_log  CMakeCache.txt  CMakeLists.txt  Makefile  README.MD  README.md  assumptions.md  build.ninja  build.sh  chat_server.md  cmake_install.cmake  codechecker.sh  compile_commands.json
.cmake/api/v1/reply/: cache-v2-1ebc7d7f58cdcc651332.json  cache-v2-32dbda87e87f28e89abb.json  cmakeFiles-v1-078f39908119dc3cc6da.json  cmakeFiles-v1-1fee2335c97834a270df.json  codemodel-v2-b1c8c701cfa4c3907085.json  codemodel-v2-cec069cdd6b89017cba0.json  directory-lib.rplib-Debug-9386c30b7e187eea87d7.json  index-2023-04-17T02-00-30-0015.json  index-2023-04-18T15-40-42-0941.json  target-rpchat-2f3ddc9301d71a039dfb.json  target-rpchat-Debug-789ebfbcbe9a4ed94510.json  target-rplib-5f8502e8ef01f406e5d6.json  target-rplib-Debug-b628cda4f6d24b39fdb8.json
include/: basic_chat.h  conn_tracker.h  main.h  networking.h  rpchat_basic_chat.h  rpchat_basic_chat_util.h  rpchat_networking.h  rpchat_process_event.h  tftp.h
include/components/: rpchat_conn_info.h  rpchat_conn_queue.h  rpchat_string.h
lib/rplib/: CMakeLists.txt  Makefile  cmake_install.cmake
lib/rplib/include/: io.h  prior_ll_lib.h  queue_ll_lib.h  rp_common.h  rplib_common.h  rplib_hashmap.h  rplib_ll_queue.h  rplib_tpool.h  tpool.h  vector.h
lib/rplib/src/: io.c  prior_ll_lib.c  queue_ll_lib.c  rplib_common.c  rplib_hashmap.c  rplib_ll_queue.c  rplib_tpool.c  tpool.c  vector.c
scripts/: client.py  test.sh
scripts/tests/: client_tests.py
scripts/tests/files/: db
src/: basic_chat.c  conn_map.c  main.c  networking.c  rpchat_basic_chat.c  rpchat_basic_chat_util.c  rpchat_file_io.c  rpchat_file_io.h  rpchat_networking.c  rpchat_process_event.c  tftp.c
src/components/: rpchat_conn_info.c  rpchat_conn_queue.c  rpchat_string.c
